--- a/ServerManagement/Components/Pages/AddServer.razor
+++ b/ServerManagement/Components/Pages/AddServer.razor
@@ -63,7 +63,7 @@
 
 		}
 
-		_navigationManager.NavigateTo("/servers");
+		_navigationManager.NavigateTo($"/servers/back_from/{this.server?.City}");
 	}
 
 }
