--- a/ServerManagement/Components/Pages/EditServer.razor
+++ b/ServerManagement/Components/Pages/EditServer.razor
@@ -1,6 +1,10 @@
 ﻿@page "/servers/edit/{id:int}"
 
 @inject NavigationManager _navigationManager
+@inject IJSRuntime JSRuntime
+
+<NavigationLock OnBeforeInternalNavigation="OnBeforeInternalNavigationMethod"
+	ConfirmExternalNavigation="true"></NavigationLock>
 
 <h3>Edit Server</h3>
 <br />
@@ -12,38 +16,34 @@
 		<DataAnnotationsValidator></DataAnnotationsValidator>
 		<ValidationSummary></ValidationSummary>
 		<InputNumber @bind-Value="server.ServerId" hidden></InputNumber>
-		<div class="row mb-3">
-			<div class="col-2">
-				<label class="col-form-label">Name</label>
-			</div>
-			<div class="col-6">
+
+		<FieldComponent Label="Name">
+			<Control>
 				<InputText @bind-Value="server.Name" class="form-control"></InputText>
-			</div>
-			<div class="col">
+			</Control>
+			<ValidationControl>
 				<ValidationMessage For="() => server.Name"></ValidationMessage>
-			</div>
-		</div>
 
-		<div class="row mb-3">
-			<div class="col-2">
-				<label class="col-form-label">City</label>
-			</div>
-			<div class="col-6">
+			</ValidationControl>
+		</FieldComponent>
+
+
+		<FieldComponent Label="City">
+			<Control>
 				<InputText @bind-Value="server.City" class="form-control"></InputText>
-			</div>
-			<div class="col">
+			</Control>
+			<ValidationControl>
 				<ValidationMessage For="() => server.City"></ValidationMessage>
-			</div>
-		</div>
 
-		<div class="row mb-3">
-			<div class="col-2">
-				<label class="col-form-label">Online</label>
-			</div>
-			<div class="col-6">
+			</ValidationControl>
+		</FieldComponent>
+
+		<FieldComponent Label="Online">
+			<Control>
 				<InputCheckbox @bind-Value="server.IsOnline" class="form-check-input"></InputCheckbox>
-			</div>
-		</div>
+			</Control>
+		</FieldComponent>
+
 		<br />
 
 		<button class="btn btn-primary" type="submit">Update</button>
@@ -74,6 +74,16 @@
 
 	}
 
+	private async Task OnBeforeInternalNavigationMethod(LocationChangingContext context)
+	{
+		var isConfirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to leave this page?");
+
+		if (!isConfirmed)
+		{
+			context.PreventNavigation();
+		}
+	}
+
 	private async Task Submit()
 	{
 		if (server != null)
@@ -81,6 +91,6 @@
 			ServersRepository.UpdateServer(server.ServerId, server);
 		}
 
-		_navigationManager.NavigateTo("/servers");
+		_navigationManager.NavigateTo($"/servers/back_from/{this.server?.City}");
 	}
 }
