--- a/ServerManagement/Components/Controls/ServerComponent.razor
+++ b/ServerManagement/Components/Controls/ServerComponent.razor
@@ -4,20 +4,59 @@
 {
 
 
-	<li @key="Server.ServerId">
-		@Server.Name in @Server.City is
-		<span style="color: @(Server.IsOnline? "green" : "red")">@(Server.IsOnline ? "online" : "offline")</span>
-		&nbsp;
-		<a href="/servers/edit/@Server.ServerId" class="btn btn-link" >Edit</a>
-		&nbsp;
+	<tr @key="Server.ServerId" style="background-color: @GetBackgroundColor()">
+		<td>
+			@Server.Name
+		</td>
 
-		<EditForm Model="Server"
-				  FormName="@($"form-server-{Server.ServerId}")"
-				  OnValidSubmit="@(() => { DeleteServer(Server.ServerId);})">
+		<td>
+			@Server.City
+		</td>
+		<td style="color: @(Server.IsOnline? "green" : "red")">@(Server.IsOnline ? "online" : "offline")</td>
 
-			<button type="submit" class="btn btn-danger">Delete</button>
-		</EditForm>
-	</li>
+
+
+
+		<td>
+			@if (Server.IsOnline)
+			{
+				Random random = new();
+				int randomNumber = random.Next(0, 500);
+				<text>@randomNumber</text>
+			}
+			else
+			{
+				<text>N/A</text>
+			}
+		</td>
+
+		<td>
+			@if (Server.IsOnline)
+			{
+				<button class="btn btn-outline-danger" type="button" @onclick="@(() => {Server.IsOnline = false;})">
+					Turn Off
+				</button>
+			}
+			else
+			{
+				<button class="btn btn-outline-success" type="button" @onclick="@(() => {Server.IsOnline = true;})">
+					Turn On
+				</button>
+			}
+			&nbsp;
+			<a href="/servers/edit/@Server.ServerId" class="btn btn-outline-primary">Edit</a>
+		</td>
+
+		<td>
+			<EditForm Model="Server"
+					  FormName="@($"form-server-{Server.ServerId}")"
+					  OnValidSubmit="@(() => { DeleteServer(Server.ServerId);})">
+
+				<button type="submit" class="btn btn-danger">Delete</button>
+			</EditForm>
+		</td>
+
+	</tr>
 }
 
 
@@ -25,9 +64,14 @@
 @code {
 	[Parameter]
 	public Server? Server { get; set; }
+
+	[CascadingParameter(Name ="SelectedCity")]
+	public string? SelectedCity { get; set; }
+
 	private bool editingServer = false;
 	//Implicit Razor Syntax starts with @
 	//Explicit Razor starts with @ and has ()
+
 
 
 
@@ -37,6 +81,29 @@
 		{
 			ServersRepository.DeleteServer(serverId);
 			_navigationManager.NavigateTo("/servers", true);
+		}
+	}
+
+	private string GetBackgroundColor()
+	{
+		if(SelectedCity != null)
+		{
+			switch (this.SelectedCity)
+			{
+				case "Toronto" : return "powerblue";
+				case "Montreal" : return "lightgray";
+				case "Ottawa" : return "palegreen";
+				case "Calgary" : return "pink";
+				case "Halifax" : return "white";
+				case "Chicago" : return "lightblue";
+				case "Indianapolis" : return "blue";
+				default:
+					return "white";
+			}
+		}
+		else
+		{
+			return "white";
 		}
 	}
 }
