--- a/ServerManagement/Components/_Imports.razor
+++ b/ServerManagement/Components/_Imports.razor
@@ -10,5 +10,6 @@
 @using ServerManagement.Components
 @using ServerManagement.Components.Controls
 @using ServerManagement.Components.Models
+@using ServerManagement.Components.Controls.Generics
 
 
