--- a/ServerManagement/Components/Controls/CityListComponent.razor
+++ b/ServerManagement/Components/Controls/CityListComponent.razor
@@ -17,7 +17,10 @@
 
 @code {
 	private List<string> cities = CitiesRepository.GetCities;
-	private string selectedCity = "Toronto";
+
+	[Parameter]
+	public string selectedCity { get; set; } = "Toronto";
+
 
 	[Parameter]
 	public EventCallback<string> SelectCityCallback { get; set; }
