--- a/ServerManagement/Components/Controls/SearchServersComponent.razor
+++ b/ServerManagement/Components/Controls/SearchServersComponent.razor
@@ -1,6 +1,6 @@
 ﻿<div class="input-group mb-3 w-50 input-width" @attributes=OtherAttributes>
 	<input type="text" placeholder="Search Servers" class="form-control" @bind-value="serverFilter" @bind-value:event="oninput" />
-	<button class="btn btn-outline-secondary" type="button" id="button-search" @onclick="@(() => {HandleSearch(serverFilter); })">Search</button>
+	<button class="btn btn-outline-secondary" type="button" id="button-search" @onclick="HandleSearch">Search</button>
 </div>
 
 @code {
@@ -17,9 +17,9 @@
 		this.serverFilter = string.Empty;
 	}
 
-	private void HandleSearch(string serverName)
+	private void HandleSearch()
 	{
-		SearchServerCallBack.InvokeAsync(serverName);
+		SearchServerCallBack.InvokeAsync(serverFilter);
 	}
 
 
