--- a/ServerManagement/Components/Controls/ServerComponent.razor
+++ b/ServerManagement/Components/Controls/ServerComponent.razor
@@ -1,4 +1,6 @@
-﻿@inject NavigationManager _navigationManager
+﻿@using StateStore
+@inject NavigationManager _navigationManager
+@inject TorontoOnlineServersStore _torontoOnlineServersStore
 
 @if(Server != null)
 {
@@ -33,18 +35,18 @@
 		<td>
 			@if (Server.IsOnline)
 			{
-				<button class="btn btn-outline-danger" type="button" @onclick="@(() => {Server.IsOnline = false;})">
+				<button class="btn btn-outline-danger" type="button" @onclick="@(() =>SetServerStatus(false))">
 					Turn Off
 				</button>
 			}
 			else
 			{
-				<button class="btn btn-outline-success" type="button" @onclick="@(() => {Server.IsOnline = true;})">
+				<button class="btn btn-outline-success" type="button" @onclick="@(() =>SetServerStatus(true))">
 					Turn On
 				</button>
 			}
 			&nbsp;
-			<a href="/servers/edit/@Server.ServerId" class="btn btn-outline-primary">Edit</a>
+			<a href="/server/@Server.ServerId" class="btn btn-outline-primary">Edit</a>
 		</td>
 
 		<td>
@@ -104,6 +106,30 @@
 		else
 		{
 			return "white";
+		}
+	}
+
+	private void SetServerStatus(bool status)
+	{
+		if(this.Server is not null)
+		{
+			if(this.Server.IsOnline != status)
+			{
+				if(this.Server.City.Equals("Toronto", StringComparison.OrdinalIgnoreCase))
+				{
+					var num = _torontoOnlineServersStore.GetNumberServersOnline();
+					if (status)
+					{
+						_torontoOnlineServersStore.SetNumberServersOnline(num + 1);
+					}else if(num > 1)
+					{
+						_torontoOnlineServersStore.SetNumberServersOnline(num - 1);
+					}
+				}
+				this.Server.IsOnline = status;
+
+			}
+
 		}
 	}
 }
