--- a/ServerManagement/Components/Controls/ServerListComponent.razor
+++ b/ServerManagement/Components/Controls/ServerListComponent.razor
@@ -1,4 +1,5 @@
 ﻿@inherits BaseComponent
+@inject IServersEFCoreRepository ServersEFCoreRepository
 
 <table class="table table-striped">
 	<RepeaterComponent Items="servers">
@@ -34,10 +35,10 @@
 	{
 		if (string.IsNullOrWhiteSpace(this.SearchFilter))
 		{
-			servers = ServersRepository.GetServersByCity(CityName ?? "Toronto");
+			servers = ServersEFCoreRepository.GetServersByCity(CityName ?? "Toronto");
 
 		}
-		servers = ServersRepository.SearchServers(this.SearchFilter);
+		servers = ServersEFCoreRepository.SearchServers(this.SearchFilter);
 	}
 
 
