--- a/WebAssemblyDemo/WebAssemblyDemo.Client/_Imports.razor
+++ b/WebAssemblyDemo/WebAssemblyDemo.Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using WebAssemblyDemo.Client
+@using WebAssemblyDemo.Client.Models
+
